# kursovaya

./: MarinMM_321_readme.txt
scaler_Marin/: apps.py  balancer.py  instance.py  main.py  request.py  resource_allocator.py  response.py  scaler.py  state.py  timeline.py
scaler_Marin/input/: apps.json  requests.txt
scaler_Marin/templates/: create_tenant.txt  delete_tenant.txt  structure.txt  structure_no_vertical.txt
vm_allocator_Chupachin/algo/: CMakeLists.txt  main.cpp
vm_allocator_Chupachin/algo/include/: CMakeLists.txt  computer.cpp  computer.h  criteria.h  defs.h  edge.h  element.h  leafnode.h  link.cpp  link.h  network.h  node.h  numa_block.cpp  numa_block.h  operation.h  parameter.h  path.h  request.h
vm_allocator_Chupachin/algo/interface/: elementfactory.cpp  elementfactory.h  factory.cpp  factory.h  snapshot.cpp  tenantxmlfactory.cpp  tenantxmlfactory.h
vm_allocator_Chupachin/algo/prototype/: exhaustivesearcher.cpp  exhaustivesearcher.h  prototype.cpp  prototype.h
vm_allocator_Chupachin/algo/routing/: CMakeLists.txt  bfsqueue.cpp  bfsrouter.cpp  bfsrouter.h  bsearcher.cpp  dijkstrarouter.cpp  dijkstrarouter.h
vm_allocator_Chupachin/tests/: test.dcxml
