CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(include)

find_package( Qt5Core )

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_CXX_FLAGS "-std=c++0x")

FILE(GLOB SOURCE_FILES *.cpp)
# FILE(GLOB HEADER_FILES *.h)
FILE(GLOB QT_HEADERS *.h)


# ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${QT_HEADERS_MOC})
qt5_use_modules(${PROJECT_NAME} Core)

#ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
